this is my first commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    <h1>DRISHTI THE VISION</h1> 
-   <P></P>
+   <P>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam cumque modi libero quibusdam dignissimos, nisi laboriosam ipsam minus molestias in sequi sed magnam voluptate cum quaerat? Id sint inventore excepturi?</P>
 </body>
 </html>
